# shot-ledger

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json  wrangler.jsonc
.github/workflows/: ci.yml
docs/: ADVERSARIAL_QA_2026-07-18.md  ARCHITECTURE.md  CONTEST_REQUIREMENTS_2026-07-18.md  DEMO_SCRIPT_DRAFT_2026-07-17.md  DEVPOST_FIELD_MAP_2026-07-18.md  DEVPOST_SUBMISSION_DRAFT_2026-07-17.md  JUDGE_FIRST_SUBMISSION_PACKET_2026-07-18.md  NAUMIO_YOUTUBE_PUBLISHING_PACKET_2026-07-18.md  REAL_PROOF_RUNBOOK_2026-07-18.md  SECURE_PROOF_RUNNER_HANDOFF_2026-07-18.md  SHOT_LEDGER_ONE_DAY_PROOF_CONTRACT_2026-07-17.md  SHOT_LEDGER_PRODUCT_BET_2026-07-17.md  SUBMISSION_EVIDENCE_MATRIX.md
ops/: shot-ledger.op.env.example
receipts/: SHOT_LEDGER_ADVERSARIAL_QA_RECEIPT_2026-07-18.md  SHOT_LEDGER_DEVPOST_REGISTRATION_RECEIPT_2026-07-18.md  SHOT_LEDGER_JUDGE_PACKAGE_RECEIPT_2026-07-18.md  SHOT_LEDGER_PUBLIC_PREVIEW_PRIVACY_QA_RECEIPT_2026-07-18.md  SHOT_LEDGER_RULES_AND_CI_RECEIPT_2026-07-18.md  SHOT_LEDGER_SECURE_PROOF_RUNNER_RECEIPT_2026-07-18.md  SHOT_LEDGER_SUBMISSION_COPY_PACKET_RECEIPT_2026-07-18.md
scripts/: proof
src/shot_ledger/: __init__.py  b2_store.py  decision.py  export_worker_demo.py  finalize.py  finalize_real_proof.py  (+10 more)
tests/: test_b2_store.py  test_decision.py  test_export_worker_demo.py  test_finalize.py  test_generation_state.py  test_preflight_real_proof.py  test_real_proof_checkpointing.py  test_real_proof_config.py  test_repository.py  test_review.py  test_verification.py  test_verify_b2.py
(+5 files in other folders)
